Fixed demo to use external links

--- a/test/functional/clicktracking.html
+++ b/test/functional/clicktracking.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Carousel Demo Page</title>
     <!-- Load local jQuery, removing access to $ (use jQuery, not $). -->
-    <script src="../../libs/jquery/jquery.js"></script>
-    <link rel="stylesheet" href="../../src/responsive-carousel.css" media="screen">
+    <script src="http://filamentgroup.github.io/responsive-carousel/libs/jquery/jquery.js"></script>
+    <link rel="stylesheet" href="http://filamentgroup.github.io/responsive-carousel/src/responsive-carousel.css" media="screen">
     <link rel="stylesheet" href="../assets/demostyles.css">
     <!-- Load local lib and tests. -->
-    <script src="../../src/responsive-carousel.js"></script>
-    <script src="../../src/responsive-carousel.autoinit.js"></script>
+    <script src="http://filamentgroup.github.io/responsive-carousel/src/responsive-carousel.js"></script>
     <script src="../../src/responsive-carousel.clicktracking.js"></script>
     <script type="text/javascript">
         window._gaq = []; /* mocked Google Analytics tracking array, on a real
